--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@600&family=Passero+One&family=UnifrakturMaguntia&family=VT323&display=swap"
       rel="stylesheet"
     />
   </head>
