--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@600&family=Passero+One&family=Press+Start+2P&family=UnifrakturMaguntia&family=VT323&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=UnifrakturMaguntia&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/@kfonts/neodgm/index.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
